# UvcUsbCamera

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  local.properties.template  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jiangdg/demo/: DemoApplication.kt  DemoFragment.kt  EffectListDialog.kt  MainActivity.kt
app/src/main/res/layout/: fragment_demo.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: INDEX.md  QUICKSTART.md  USAGE.md
docs/developers/: API_REFERENCE.md  BUILD_SETUP.md  INTEGRATION_GUIDE.md  NATIVE_LIBRARIES.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle.kts
libausbc-camera/: build.gradle.kts  proguard-rules.pro
libausbc-camera/src/main/: AndroidManifest.xml
libausbc-core/: build.gradle.kts  proguard-rules.pro
libausbc-core/src/main/: AndroidManifest.xml
libausbc-encode/: build.gradle.kts  proguard-rules.pro
libausbc-encode/src/main/: AndroidManifest.xml
libausbc-render/: build.gradle.kts  proguard-rules.pro
libausbc-render/src/main/: AndroidManifest.xml
libausbc-utils/: build.gradle.kts  proguard-rules.pro
libausbc-utils/src/main/: AndroidManifest.xml
libausbc/src/main/: AndroidManifest.xml
libnative/: build.gradle.kts
libnative/src/main/cpp/: CMakeLists.txt
libuvc/: build.gradle.kts
libuvc/src/main/: AndroidManifest.xml
libuvc/src/main/jni/: Application.mk
(+64 files in other folders)
